hphp/test/slow/arrayish-casts.php.expectf
array(1) {
  [0]=>
  function(foo)
}
Exception: Func to darray conversion
Exception: Func to varray conversion
Exception: Func to dict conversion
Exception: Func to vec conversion
Exception: Func to keyset conversion
array(2) {
  [0]=>
  string(1) "A"
  [1]=>
  string(4) "meth"
}
array(2) {
  [0]=>
  string(1) "A"
  [1]=>
  string(4) "meth"
}
array(2) {
  [0]=>
  string(1) "A"
  [1]=>
  string(4) "meth"
}
dict(2) {
  [0]=>
  string(1) "A"
  [1]=>
  string(4) "meth"
}
vec(2) {
  string(1) "A"
  string(4) "meth"
}
keyset(2) {
  string(1) "A"
  string(4) "meth"
}

Fatal error: Cannot convert record to array in %s/arrayish-casts.php on line 15

Fatal error: Cannot convert record to darray in %s/arrayish-casts.php on line 23

Fatal error: Cannot convert record to varray in %s/arrayish-casts.php on line 19

Fatal error: Cannot convert record to dict in %s/arrayish-casts.php on line 27

Fatal error: Cannot convert record to vec in %s/arrayish-casts.php on line 31

Fatal error: Cannot convert record to keyset in %s/arrayish-casts.php on line 35
